--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name:  npm install and build webpack
-    - run: |
+      run: |
         npm install
         npm run build
 
@@ -33,12 +33,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: npm install, and test
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        
-    - run: |
+      
+    - name: npm install, and test
+      run: |
         npm install
         npm test
       
